--- a/src/app/drafts/matchup-overview/widgets/teambuilder/teambuilder.component.html
+++ b/src/app/drafts/matchup-overview/widgets/teambuilder/teambuilder.component.html
@@ -92,6 +92,7 @@
         [matchupData]="matchupData"
         [team]="team"
         [(view)]="view"
+        (pokemonChange)="saveTeam()"
       />
     }
   </div>
