--- a/src/app/league-zone/league-sign-up/league-sign-up.component.html
+++ b/src/app/league-zone/league-sign-up/league-sign-up.component.html
@@ -247,7 +247,7 @@
               class="link"
               >league rules</a
             >
-            and agree to commit to playing for the entire season.
+            and commit to playing for the entire season.
           </span>
         </label>
       </div>
